[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/housetileset.png" type="Texture" id=2]
[ext_resource path="res://Cabin.gd" type="Script" id=3]
[ext_resource path="res://Battery.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/TwilightVillage_RPG_Tileset(1).png" type="Texture" id=5]

[sub_resource type="TileSet" id=11]
0/name = "housetileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 192, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "housetileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 392, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "housetileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 48, 392, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=18]
0/name = "TwilightVillage_RPG_Tileset(1).png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 576, 512, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 12 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "TwilightVillage_RPG_Tileset(1).png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 576, 544, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 13 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "TwilightVillage_RPG_Tileset(1).png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 608, 544, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 14 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "TwilightVillage_RPG_Tileset(1).png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 608, 576, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 15 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "TwilightVillage_RPG_Tileset(1).png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 608, 608, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 16 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "TwilightVillage_RPG_Tileset(1).png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 512, 512, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 17 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "TwilightVillage_RPG_Tileset(1).png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 296, 168, 16, 24 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="RectangleShape2D" id=10]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 29, 32 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 28, 32 )

[node name="Cabin" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -196606, 2, 0, -196605, 2, 0, -196604, 2, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -196598, 2, 0, -196597, 2, 0, -196596, 2, 0, -196595, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -131070, 2, 0, -131069, 2, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, 2, 0, -131061, 2, 0, -131060, 2, 0, -131059, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, 65535, 2, 0, 0, 0, 0, 1, 0, 1, 2, 0, 65537, 3, 0, 65536, 4, 0, 65537, 5, 0, 0, 6, 0, 65537, 7, 0, 0, 8, 0, 1, 9, 0, 65537, 10, 0, 0, 11, 0, 1, 12, 0, 0, 13, 2, 0, 131071, 2, 0, 65536, 0, 65537, 65537, 0, 65536, 65538, 0, 1, 65539, 0, 1, 65540, 0, 0, 65541, 0, 65537, 65542, 0, 65536, 65543, 0, 65536, 65544, 0, 65536, 65545, 0, 1, 65546, 0, 0, 65547, 0, 0, 65548, 0, 65536, 65549, 2, 0, 196607, 2, 0, 131072, 0, 65537, 131073, 0, 0, 131074, 0, 65537, 131075, 0, 0, 131076, 0, 1, 131077, 0, 1, 131078, 0, 65536, 131079, 0, 0, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 65536, 131084, 0, 1, 131085, 2, 0, 262143, 2, 0, 196608, 0, 0, 196609, 0, 65537, 196610, 0, 0, 196611, 0, 1, 196612, 0, 1, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 0, 196617, 0, 65536, 196618, 0, 1, 196619, 0, 1, 196620, 0, 0, 196621, 2, 0, 327679, 2, 0, 262144, 0, 65536, 262145, 0, 65536, 262146, 0, 1, 262147, 0, 65536, 262148, 0, 65536, 262149, 0, 65537, 262150, 0, 65536, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 0, 262155, 0, 65536, 262156, 0, 0, 262157, 2, 0, 393215, 2, 0, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 1, 327684, 0, 65537, 327685, 0, 0, 327686, 0, 1, 327687, 0, 65537, 327688, 0, 0, 327689, 0, 65536, 327690, 0, 65537, 327691, 0, 65536, 327692, 0, 0, 327693, 2, 0, 458751, 2, 0, 393216, 0, 0, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 65537, 393221, 0, 65536, 393222, 0, 1, 393223, 0, 65536, 393224, 0, 65537, 393225, 0, 1, 393226, 0, 65536, 393227, 0, 65537, 393228, 0, 65537, 393229, 2, 0, 524287, 2, 0, 458752, 0, 65536, 458753, 0, 1, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 0, 458757, 0, 1, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 1, 458761, 0, 65536, 458762, 0, 65537, 458763, 0, 1, 458764, 0, 0, 458765, 2, 0, 589823, 2, 0, 524288, 0, 0, 524289, 0, 1, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 1, 524294, 0, 0, 524295, 0, 65536, 524296, 0, 65537, 524297, 0, 1, 524298, 0, 1, 524299, 0, 0, 524300, 0, 1, 524301, 2, 0, 655359, 2, 0, 589824, 0, 65537, 589825, 0, 65537, 589826, 0, 0, 589827, 0, 1, 589828, 0, 1, 589829, 0, 0, 589830, 0, 65537, 589831, 0, 0, 589832, 0, 65537, 589833, 0, 65536, 589834, 0, 65536, 589835, 0, 65537, 589836, 0, 65536, 589837, 2, 0, 720895, 2, 0, 655360, 0, 65537, 655361, 0, 1, 655362, 0, 1, 655363, 0, 65537, 655364, 0, 65536, 655365, 0, 65537, 655366, 0, 0, 655367, 0, 1, 655368, 0, 65537, 655369, 0, 65536, 655370, 0, 1, 655371, 0, 65537, 655372, 0, 65537, 655373, 2, 0, 786431, 2, 0, 720896, 0, 65536, 720897, 0, 0, 720898, 0, 1, 720899, 0, 0, 720900, 0, 0, 720901, 0, 65537, 720902, 0, 65536, 720903, 0, 65537, 720904, 0, 65536, 720905, 0, 65537, 720906, 0, 0, 720907, 0, 0, 720908, 0, 65536, 720909, 2, 0, 851967, 2, 0, 786432, 0, 0, 786433, 0, 1, 786434, 0, 65536, 786435, 0, 65537, 786436, 0, 1, 786437, 0, 1, 786438, 0, 1, 786439, 0, 0, 786440, 0, 65536, 786441, 0, 0, 786442, 0, 65536, 786443, 0, 65536, 786444, 0, 1, 786445, 2, 0, 917503, 2, 0, 851968, 0, 65537, 851969, 0, 0, 851970, 0, 0, 851971, 0, 65536, 851972, 0, 65537, 851973, 0, 65536, 851974, 0, 1, 851975, 0, 65536, 851976, 0, 1, 851977, 0, 1, 851978, 0, 65537, 851979, 0, 1, 851980, 0, 1, 851981, 2, 0, 983039, 2, 0, 917504, 0, 65537, 917505, 0, 1, 917506, 0, 65537, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 1, 917511, 0, 65537, 917512, 0, 0, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 0, 917516, 0, 65537, 917517, 2, 0, 1048575, 2, 0, 983040, 0, 0, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65536, 983044, 0, 65537, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 65537, 983050, 0, 1, 983051, 0, 0, 983052, 0, 0, 983053, 2, 0, 1114111, 2, 0, 1048576, 0, 1, 1048577, 0, 1, 1048578, 0, 1, 1048579, 0, 65536, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 65537, 1048583, 0, 65536, 1048584, 0, 65536, 1048585, 0, 0, 1048586, 0, 65537, 1048587, 0, 1, 1048588, 0, 65536, 1048589, 2, 0, 1179647, 2, 0, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 0, 1114116, 0, 65537, 1114117, 0, 1, 1114118, 0, 65536, 1114119, 0, 1, 1114120, 0, 1, 1114121, 0, 65537, 1114122, 0, 65536, 1114123, 0, 0, 1114124, 0, 0, 1114125, 2, 0, 1245183, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 0, 65536, 1179653, 0, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0 )

[node name="furniture" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 18 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, 2, 3, 0, 131072, 5, 0, 262145, 6, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 155 )

[node name="Battery" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 144 )

[node name="Woods" type="Area2D" parent="."]
position = Vector2( 80, 288 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Woods"]
shape = SubResource( 10 )

[node name="Node" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="Node"]
position = Vector2( 16, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D"]
position = Vector2( 19, -8 )
shape = SubResource( 19 )

[node name="Area2D3" type="Area2D" parent="Node"]
position = Vector2( 40, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D3"]
position = Vector2( -8, -16 )
shape = SubResource( 20 )

[node name="Area2D2" type="Area2D" parent="Node"]
position = Vector2( 160, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D2"]
position = Vector2( -4, 0 )
shape = SubResource( 21 )

[connection signal="area_entered" from="Node/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Node/Area2D3" to="." method="_on_Area2D3_area_entered"]
[connection signal="area_entered" from="Node/Area2D2" to="." method="_on_Area2D2_area_entered"]
